- cleand up login

--- a/mybrary/Base.lproj/Main.storyboard
+++ b/mybrary/Base.lproj/Main.storyboard
@@ -277,18 +277,18 @@ and we make sure we remember it for you :) </string>
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ted-fB-roI">
-                                <rect key="frame" x="16" y="153" width="288" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ted-fB-roI">
+                                <rect key="frame" x="16" y="140" width="288" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kr8-LX-dRL">
-                                <rect key="frame" x="16" y="191" width="288" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kr8-LX-dRL">
+                                <rect key="frame" x="16" y="178" width="288" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t6T-He-MRg">
-                                <rect key="frame" x="137" y="229" width="38" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t6T-He-MRg">
+                                <rect key="frame" x="141" y="216" width="38" height="30"/>
                                 <state key="normal" title="Login">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -296,8 +296,15 @@ and we make sure we remember it for you :) </string>
                                     <action selector="loginPressed:" destination="8Fn-a7-3KI" eventType="touchUpInside" id="HhV-7y-BZe"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vJ6-3L-Lyb">
-                                <rect key="frame" x="129" y="296" width="55" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LHI-5Z-CJd">
+                                <rect key="frame" x="16" y="273" width="144" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vJ6-3L-Lyb">
+                                <rect key="frame" x="168" y="268" width="45" height="27"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Sign Up">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -307,9 +314,22 @@ and we make sure we remember it for you :) </string>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kr8-LX-dRL" firstAttribute="trailing" secondItem="ted-fB-roI" secondAttribute="trailing" id="3Dt-jy-JCr"/>
+                            <constraint firstItem="vJ6-3L-Lyb" firstAttribute="centerY" secondItem="LHI-5Z-CJd" secondAttribute="centerY" id="Dap-jn-V3C"/>
+                            <constraint firstItem="LHI-5Z-CJd" firstAttribute="leading" secondItem="GM1-Gu-KMQ" secondAttribute="leadingMargin" id="OLN-rX-QFi"/>
+                            <constraint firstItem="kr8-LX-dRL" firstAttribute="top" secondItem="ted-fB-roI" secondAttribute="bottom" constant="8" id="OxZ-Oy-h17"/>
+                            <constraint firstItem="kr8-LX-dRL" firstAttribute="centerX" secondItem="t6T-He-MRg" secondAttribute="centerX" id="RrQ-VG-hOF"/>
+                            <constraint firstAttribute="trailing" secondItem="ted-fB-roI" secondAttribute="trailing" constant="16" id="Vxi-br-1RP"/>
+                            <constraint firstItem="ted-fB-roI" firstAttribute="top" secondItem="EfO-oJ-RtH" secondAttribute="bottom" constant="120" id="Wrm-Nq-XG3"/>
+                            <constraint firstItem="kr8-LX-dRL" firstAttribute="leading" secondItem="ted-fB-roI" secondAttribute="leading" id="hw7-S6-GUH"/>
+                            <constraint firstItem="ted-fB-roI" firstAttribute="leading" secondItem="GM1-Gu-KMQ" secondAttribute="leading" constant="16" id="k05-eJ-Wlo"/>
+                            <constraint firstItem="t6T-He-MRg" firstAttribute="top" secondItem="kr8-LX-dRL" secondAttribute="bottom" constant="8" id="kgP-l3-YM2"/>
+                            <constraint firstItem="vJ6-3L-Lyb" firstAttribute="leading" secondItem="LHI-5Z-CJd" secondAttribute="trailing" constant="8" id="uz7-Gx-Zi9"/>
+                            <constraint firstItem="LHI-5Z-CJd" firstAttribute="top" secondItem="t6T-He-MRg" secondAttribute="bottom" constant="27" id="vDP-UT-fel"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="JO0-8v-8ti"/>
-                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="passwordField" destination="kr8-LX-dRL" id="96X-WI-8Gf"/>
                         <outlet property="userNameField" destination="ted-fB-roI" id="z4V-xE-F2u"/>
